# primer

./: cabal.project  hie.yaml  weeder.dhall
.buildkite/: pipeline.yaml
primer/: Action.hs  Actions.hs  App.hs  Available.hs  Core.hs  CoreUtils.hs  DSL.hs  Def.hs  DefUtils.hs  Errors.hs  Foreword.hs  Fresh.hs  KindError.hs  Main.hs  Makefile  Meta.hs  Module.hs  Movement.hs  Name.hs  NestedError.hs  ProgAction.hs  ProgError.hs  TestM.hs  Transform.hs  Type.hs  TypeDef.hs  TypeError.hs  Typecheck.hs  Zipper.hs  creduce  creduce-test  primer.cabal
primer-benchmark/fixtures/: sayHello.edits
primer-selda/test/Tests/: DeleteSession.hs  InsertSession.hs  ListSessions.hs  QuerySessionId.hs  UpdateSessionApp.hs
primer-service/test/outputs/OpenAPI/: openapi.json
primer/src/: Foreword.hs  Main.hs
primer/src/Control/Monad/: Fresh.hs
primer/src/Primer/: API.hs  Action.hs  App.hs  Builtins.hs  Core.hs  Def.hs  Eval.hs  EvalFull.hs  Log.hs  Module.hs  Name.hs  Pretty.hs  Primitives.hs  Refine.hs  Subst.hs  TypeDef.hs  Typecheck.hs  Unification.hs  Zipper.hs
primer/src/Primer/Action/: Actions.hs  Available.hs  Errors.hs  Movement.hs  Priorities.hs  ProgAction.hs  ProgError.hs
primer/src/Primer/App/: Base.hs
primer/src/Primer/Core/: DSL.hs  Fresh.hs  Meta.hs  Transform.hs  Type.hs  Utils.hs
primer/src/Primer/Core/DSL/: Meta.hs  Type.hs
primer/src/Primer/Core/Type/: Utils.hs
primer/src/Primer/Def/: Utils.hs
primer/src/Primer/Eval/: Ann.hs  Beta.hs  Bind.hs  Case.hs  Detail.hs  EvalError.hs  Inline.hs  Let.hs  NormalOrder.hs  Prim.hs  Push.hs  Redex.hs
primer/src/Primer/Primitives/: PrimDef.hs
primer/src/Primer/Test/: TestM.hs
primer/src/Primer/Typecheck/: Cxt.hs  KindError.hs  Kindcheck.hs  SmartHoles.hs  TypeError.hs  Utils.hs
primer/src/Primer/Zipper/: Type.hs
primer/src/Tests/: Refine.hs
primer/test/: Test.hs  TestUtils.hs
primer/test/Primer/Test/: Util.hs
primer/test/Tests/: Eval.hs  EvalFull.hs  Serialization.hs  Shadowing.hs  Typecheck.hs
primer/test/Tests/Action/: Available.hs  Prog.hs
primer/test/Tests/Eval/: Utils.hs
primer/testlib/Primer/Test/: Util.hs
