cabal-version: 3.0
name:          primer
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      A framework for structured editing.
category:      Editor

executable primer-test
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:
    Control.Monad.Fresh
    Foreword
    Primer.Action
    Primer.Action.Available
    Primer.App
    Primer.App.Base
    Primer.Core
    Primer.Core.DSL
    Primer.Core.Transform
    Primer.Core.Utils
    Primer.Def
    Primer.Def.Utils
    Primer.Log
    Primer.Module
    Primer.Name
    Primer.Name.Fresh
    Primer.Pretty
    Primer.Questions
    Primer.Refine
    Primer.Subst
    Primer.Typecheck
    Primer.TypeDef
    Primer.Unification
    Primer.Zipper
    Primer.ZipperCxt
    Control.Monad.NestedError
    Primer.Action.Actions
    Primer.Action.Errors
    Primer.Action.Movement
    Primer.Action.ProgAction
    Primer.Action.ProgError
    Primer.Core.DSL.Meta
    Primer.Core.DSL.Type
    Primer.Core.Fresh
    Primer.Core.Meta
    Primer.Core.Type
    Primer.Core.Type.Utils
    Primer.Typecheck.Cxt
    Primer.Typecheck.Kindcheck
    Primer.Typecheck.KindError
    Primer.Typecheck.SmartHoles
    Primer.Typecheck.TypeError
    Primer.Typecheck.Utils
    Primer.Zipper.Type
    Primer.Gen.App
    Primer.Gen.Core.Raw
    Primer.Gen.Core.Typed
    Primer.Test.TestM
    Primer.Test.Util

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson                        >=2.0      && <2.2
    , base                         >=4.12     && <4.17.0
    , bytestring                   >=0.10.8.2 && <0.12.0
    , containers                   >=0.6.0.1  && <0.7.0
    , deriving-aeson               >=0.2      && <0.3.0
    , exceptions                   >=0.10.4   && <0.11.0
    , extra                        >=1.7.10   && <1.8.0
    , generic-optics               >=2.0      && <2.3.0
    , hedgehog
    , list-t                       >=1.0      && <1.1.0
    , logging-effect               ^>=1.4
    , megaparsec                   >=8.0.0    && <9.4
    , mmorph                       ^>=1.2.0
    , mtl                          >=2.2.2    && <2.4.0
    , optics                       >=0.4      && <0.5.0
    , prettyprinter                >=1.7.1    && <1.8.0
    , prettyprinter-ansi-terminal  >=1.1.3    && <1.2.0
    , protolude                    >=0.3.1    && <0.4.0
    , recursion-schemes            >=5.1.3    && <5.3.0
    , semigroups                   >=0.20     && <0.21.0
    , stm                          >=2.5      && <2.6.0
    , stm-containers               >=1.1      && <1.3.0
    , text                         ^>=2.0
    , time                         >=1.11     && <1.13
    , transformers                 >=0.5.6.2  && <0.7.0
    , uniplate                     >=1.6      && <1.7.0
    , uuid                         ^>=1.3.15
