cabal-version: 3.0
name:          primer
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      A framework for structured editing.
category:      Editor

executable primer-test
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:
    Primer.Gen.Core.Typed
    Primer.Typecheck
    Tests.Refine

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , base                         >=4.12     && <4.17.0
    , hedgehog
    , mmorph                       ^>=1.2.0
    , mtl                          >=2.2.2    && <2.4.0
-- the rest are only needed for Main
    , containers                   >=0.6.0.1  && <0.7.0
    , extra                        >=1.7.10   && <1.8.0
    , text                         ^>=2.0
    , transformers                 >=0.5.6.2  && <0.7.0
